Run & Publish unit Tests - 3

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,4 @@
+# comment
 trigger:
 - '*'
 
@@ -46,11 +47,11 @@ steps:
     projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
-displayName: 'Run unit tests - $(buildConfiguration)'
-inputs:
-  command: 'test'
-  arguments: '--no-build --configuration $(buildConfiguration)'
-  projects: '**/*.Tests.csproj'
+  displayName: 'Run unit tests - $(buildConfiguration)'
+  inputs:
+    command: 'test'
+    arguments: '--no-build --configuration $(buildConfiguration)'
+    projects: '**/*.Tests.csproj'
 
 - task: DotNetCoreCLI@2
   displayName: 'Publish the project - $(buildConfiguration)'
